# vegito

./: .travis.yml  README.md  vegito.cabal
bench/: bench.hs
src/: Gotenks.hs  Vegito.hs
test/: GotenksSpec.hs  VegitoSpec.hs
