name:                vegito
version:             0.1.0.0
synopsis:            Some standalone stream fusion experiments
description:         Please see README.md
homepage:            http://github.com/snoyberg/vegito#readme
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vegito
  build-depends:       base >= 4.8 && < 5
  default-language:    Haskell2010

test-suite vegito-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vegito
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark vegito-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             bench.hs
  build-depends:       base
                     , vegito
                     , criterion
                     , vector
                     , conduit-combinators
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/snoyberg/vegito
